--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "0.1.2",
     "axios": "^0.18.0",
+    "bootbox": "^4.4.0",
     "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
     "react": "^16.6.1",
     "react-bootstrap-typeahead": "^3.2.4",
     "react-dom": "^16.6.1",
