--- a/client/package.json
+++ b/client/package.json
@@ -31,5 +31,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "reactstrap": "^6.5.0"
+  },
+  "devDependencies": {
+    "@types/reactstrap": "^6.4.2"
   }
 }
