--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ajv": "^6.5.5",
     "cors": "^2.8.4",
     "create-react-app": "^2.1.1",
     "express": "^4.16.3",
