--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^16.6.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "reactstrap": "^6.5.0"
+    "reactstrap": "^6.5.0",
+    "simple-react-validator": "0.0.8"
   },
   "devDependencies": {
     "@types/reactstrap": "^6.4.2"
