--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./server/index.js"
+    "dev": "nodemon ./server/index.js",
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "cors": "^2.8.4",
     "create-react-app": "^2.1.1",
     "express": "^4.16.3",
@@ -17,6 +19,7 @@
     "mongoose": "^5.1.2"
   },
   "devDependencies": {
+    "mocha": "^5.2.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.17.5"
   }
