--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react": "^16.6.1",
     "react-bootstrap-typeahead": "^3.2.4",
     "react-dom": "^16.6.1",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "reactstrap": "^6.5.0"
