--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "create-react-app": "^2.1.1",
     "express": "^4.16.3",
     "express-res-status": "^1.0.2",
-    "mongoose": "^5.1.2"
+    "mongoose": "^5.1.2",
+    "validator": "^10.9.0"
   },
   "devDependencies": {
     "mocha": "^5.2.0",
