--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "react": "^16.6.1",
+    "react-alert": "^4.0.4",
     "react-bootstrap-typeahead": "^3.2.4",
     "react-dom": "^16.6.1",
     "react-router-dom": "^4.3.1",
