--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   },
   "devDependencies": {
     "concurrently": "^4.0.1"
+  },
+  "dependencies": {
+    "simple-react-validator": "^1.0.0"
   }
 }
