--- a/package.json
+++ b/package.json
@@ -12,5 +12,14 @@
   },
   "devDependencies": {
     "concurrently": "^4.0.1"
+  },
+  "dependencies": {
+    "bootstrap": "^4.1.3",
+    "formik": "^1.3.2",
+    "g": "^2.0.1",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1",
+    "reactstrap": "^6.5.0"
   }
 }
